# shawn-browser-automation-system

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  Dockerfile.simple  README.md  database.db  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  sample.py  task.py  test.html
interface/: nuxt.config.ts  package-lock.json  package.json
interface/app/: app.vue
interface/app/assets/css/: main.css
interface/app/components/: DashboardContent.vue  DashboardSidebar.vue  LogsCard.vue  NavBar.vue  PlatformContent.vue  PromptSection.vue  SharedMetrics.vue  Sidebar.vue  TableModel.vue  UserCard.vue
interface/app/components/ChatGPT/: ChatGPTIndex.vue
interface/app/components/Overall/: OverallIndex.vue
interface/app/components/Show/: Citation.vue  Output.vue  Sentiments.vue
interface/app/components/metrics/: RankOverTime.vue
interface/app/composables/: useMetricsFunctions.ts  usePlateformMetrics.ts  useRankingOverTime.ts  useSharedMetricsVar.ts
interface/app/layouts/: default.vue
interface/app/pages/: chatgpt.vue  dashboard.vue  gemini.vue  home.vue  index.vue  perplexity.vue  reports.vue  test.vue
interface/app/pages/report/[id]/: metrics.vue  outputs.vue  show.vue
interface/app/pages/reports/[id]/: metrics.vue  outputs.vue  show.vue
interface/app/types/: metrics.ts  ranking.ts  report.ts
interface/app/utils/: getAverageJobDuration.ts  getAverageTotalTimePerPrompt.ts  getCoverageMetrics.ts  getJobSuccessRate.ts  getLastRunTimestamp.ts  getMentionsMetrics.ts  getPositionMetrics.ts  getPromptCoverageRate.ts  getPromptsCitations.ts  getPromptsOutputs.ts  getPromptsSentiments.ts  getRankingMetrics.ts  getRankingOverTimeMetrics.ts  getSchedule.ts  getScraperErrorRate.ts  getShareOfVoiceMetrics.ts  getTotalRunningJobs.ts  globals.ts  platformsMetrics.ts  startBrowser.ts
interface/server/api/: reports.get.ts
interface/server/api/browser/: start.post.ts
interface/server/api/globals/: start-browser.post.ts
interface/server/api/logs/: [process_id].ts
interface/server/api/metrics/: average-total-time-per-prompt.get.ts  job-success-rate.get.ts  last-run-timestamp.get.ts  prompt-coverage-rate.get.ts  total-running-jobs.get.ts
interface/server/api/report/metrics/: coverage.get.ts  (+5 more)
interface/server/api/schedule/: index.get.ts
src/api/: app.py  dependencies.py
src/api/routes/: browser.py  globals.py  logs.py  metrics.py  report.py  schedule.py
src/config/: config.py
src/models/: model.py
src/utils/: aws_storage.py  browser_runner.py  celery_app.py  database.py  globals.py  redis_utils.py  slack_service.py  supabase.py
(+4 files in other folders)
