[project]
name = "shawn-browser-automation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.1.0",
    "boto3>=1.39.11",
    "camoufox>=0.4.11",
    "celery[redis]>=5.3.1",
    "dateparser>=1.2.2",
    "fastapi[standard]>=0.116.1",
    "html-to-markdown[lxml]>=1.9.0",
    "psycopg[binary]>=3.2.9",
    "ptpython>=3.0.30",
    "pyperclip>=1.9.0",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.42",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
