[project]
name = "shawn-browser-automation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.1.0",
    "botasaurus-driver>=4.0.92",
    "boto3>=1.39.11",
    "camoufox[geoip]>=0.4.11",
    "celery[redis]>=5.3.1",
    "dateparser>=1.2.2",
    "fastapi[standard]>=0.116.1",
    "flower>=2.0.1",
    "html-to-markdown[lxml]>=1.9.0",
    "netstealth[full]>=0.1.0",
    "patchright>=1.55.1",
    "playwright-stealth>=2.0.0",
    "psycopg[binary]>=3.2.9",
    "ptpython>=3.0.30",
    "pyautogui>=0.9.54",
    "pyperclip>=1.9.0",
    "redis>=6.4.0",
    "sbase>=4.41.12",
    "selenium-base>=4.41.12",
    "setuptools>=80.9.0",
    "sqlalchemy[asyncio]>=2.0.42",
    "sqlmodel>=0.0.24",
    "undetected-chromedriver>=3.5.5",
    "undetected-geckodriver>=1.0.7",
    "user-agent>=0.1.14",
    "uvicorn>=0.35.0",
]
