[tool.uv.sources]
camoufox = { git = "https://github.com/coryking/camoufox.git", tag = "v142.0.1-fork.27", subdirectory = "pythonlib" }

[project]
name = "shawn-browser-automation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.1.0",
    "botasaurus-driver>=4.0.92",
    "botasaurus-humancursor>=4.0.83",
    "boto3>=1.39.11",
    "celery[redis]>=5.3.1",
    "dateparser>=1.2.2",
    "fastapi[standard]>=0.116.1",
    "flower>=2.0.1",
    "func-retry>=0.1.4",
    "html-to-markdown[lxml]>=1.9.0",
    "psycopg[binary]>=3.2.9",
    "ptpython>=3.0.30",
    "pyautogui>=0.9.54",
    "pydoll-python>=2.12.4",
    "pyperclip>=1.9.0",
    "pyvirtualdisplay>=3.0",
    "redis>=6.4.0",
    "slack-sdk>=3.39.0",
    "sqlalchemy[asyncio]>=2.0.42",
    "sqlmodel>=0.0.24",
    "user-agent>=0.1.14",
    "uvicorn>=0.35.0",
    "camoufox @ git+https://github.com/coryking/camoufox.git@v142.0.1-fork.27#subdirectory=pythonlib",
]
